# QSnakeGame

./: .gitignore  CMakeLists.txt  LICENSE  README.md  obs_list.pkl  setup.py
ref/: final_ai.py  read_log.py
scripts/: save_video_from_pkl.py
snake_env/agents/: __init__.py  random_agent.py
snake_env/agents/strategy/: __init__.py  random_strategy.py  repeated_jump.py
snake_env/agents/utils/: __init__.py
snake_env/core/: __init__.py  snake_env.py
snake_env/utils/: __init__.py  state_extract.py
snake_env/visualizer/: __init__.py  visualizer.py
src/: CMakeLists.txt  EnvState.cpp  EnvState.h  GameStruct.cpp  GameStruct.h  MapInfo.cpp  MapInfo.h  SnakeGame.cpp  SnakeGame.h  SnakeInfo.cpp  SnakeInfo.h  Utils.cpp  Utils.h  library.cpp  main.cpp  pyInterface.cpp  pyInterface.h
tests/: test_built_in_ai.py  test_snake_env.py  test_utils.py  test_visualizer.py
